# fastvimes

./: .devcontainer.json  .gitignore  AGENT.md  BACKLOG.md  PLAYWRIGHT_CONSOLIDATION_COMPLETE.md  PLAYWRIGHT_SETUP_COMPLETE.md  README.md  REFACTOR_COMPLETE.md  ROADMAP.md  SPEC_GUIDELINES.md  TEST_SPEC_MAPPING.md  UI_WALKTHROUGH_COMPLETE.md  WORK_SUMMARY.md  playwright.config.py  pyproject.toml
docs/: PLAYWRIGHT_TESTING.md  README.md  RQL_IMPLEMENTATION.md  TESTING.md  UI_QUICK_START.md  UI_WALKTHROUGH.md  advanced.md  component_override_guide.md  customization.md  manual-testing.md  simple.md  test_performance_guide.md
examples/: basic_app.py  component_override_example.py  reactive_demo.py
fastvimes/: __init__.py  api.py  api_client.py  app.py  cli.py  config.py  core_app.py  database_service.py  dependencies.py  endpoints.py  forms.py  html_generator.py  middleware.py  rql.py  rql_sqlglot.py  rql_to_sql.py  services.py  ui_pages.py
fastvimes/admin/: config.html  dashboard.html  nav.html  schema.html  tables.html
fastvimes/components/: __init__.py  data_explorer.py  form_generator.py  query_builder.py  table_browser.py
fastvimes/middleware/: __init__.py  auth.py  auth_authlib.py
fastvimes/overrides/: __init__.py  example_custom_table.py
fastvimes/static/: fastvimes.css  header_include.html
scripts/: capture_walkthrough_screenshots.py  demo_screenshots.py
tests/: README.md  __init__.py  conftest.py  test_app.py  test_auth_authlib.py  test_bulk_operations.py  test_cli_bulk_commands.py  test_config.py  test_database.py  test_database_service_complete.py  test_dependencies.py  test_fastapi_bulk_endpoints.py  test_forms.py  test_htmx_fragments.py  test_interfaces.py  test_large_dataset.py  test_lean_structure.py  test_middleware.py  test_multi_schema_autogeneration.py  test_phase2_features.py  test_playwright.py  test_playwright_quick.py  test_playwright_ui_workflows.py  test_rql_integration.py  test_rql_to_sql.py  test_schema.py  test_ui_components.py  test_ui_layout.py
tests/rql/: __init__.py  test_errors.py  test_ibis_integration.py  test_operators.py  test_parse.py
