[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastvimes"
version = "0.1.0"
description = "FastAPI-inspired library for building data tools with automatic CLI, web API, and HTML interfaces"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FastVimes Team", email = "fastvimes@example.com"},
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "typer>=0.9.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pyrql>=0.7.11",
    "nicegui>=1.4.0",
    "sqlglot>=27.0.0",
    "pyarrow>=14.0.0",
    "authlib>=1.3.0",
    "bcrypt>=4.0.0",
]



[project.scripts]
fastvimes = "fastvimes.cli:app"

[project.urls]
Homepage = "https://github.com/adonm/fastvimes"
Repository = "https://github.com/adonm/fastvimes.git"
Issues = "https://github.com/adonm/fastvimes/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastvimes*"]

[tool.setuptools.package-data]
fastvimes = ["admin/*.html", "static/*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]



[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "python_api: Python API interface tests (fast)",
    "cli: CLI interface tests (slow - uses subprocess)",  
    "http: HTTP interface tests (fast)",
    "slow: Slow tests that use subprocess or file operations",
    "fast: Fast tests for regular development (python_api + http)",
    "playwright: Playwright UI tests (slow - uses browser)"
]



[tool.coverage.run]
source = ["fastvimes"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "rich>=14.0.0",
    "ruff>=0.12.2",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "nodeenv>=1.9.1",
]
